Read and write data to csv

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Data storage
+*.csv
+
 # User-specific files
 *.rsuser
 *.suo
